trunk/Archive2/1d/a5782569e4dcbf/output
+ clang++ -std=c++11 -O0 -W -Wall -Wextra -pedantic -pthread main.cpp
main.cpp:16:21: error: nested name specifier 'outer<T>::inner<V>::' for declaration does not refer into a class, class template or class template partial specialization
outer<T>::inner<V>::value = {};
~~~~~~~~~~~~~~~~~~~~^
1 error generated.
